--- a/bookmyshow/client/package.json
+++ b/bookmyshow/client/package.json
@@ -1,24 +1,26 @@
 {
   "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.24.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "version": "0.1.0",
+      "private": true,
+        "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+      "@testing-library/dom": "^10.4.0",
+        "@testing-library/jest-dom": "^6.6.3",
+          "@testing-library/react": "^16.2.0",
+            "@testing-library/user-event": "^13.5.0",
+              "antd": "^5.24.1",
+                "axios": "^1.7.9",
+                  "react": "^19.0.0",
+                    "react-dom": "^19.0.0",
+                      "react-router-dom": "^7.2.0",
+                        "react-scripts": "5.0.1",
+                          "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+      "build": "react-scripts build",
+        "test": "react-scripts test",
+          "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -32,13 +34,14 @@
       "not dead",
       "not op_mini all"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
   },
   "devDependencies": {
     "tailwindcss": "^3.4.17"
-  }
+  },
+  "proxy": "http://localhost:8080/"
 }
